objects/MealItem__c.object
<CustomObject>
    <description>Food items associated with a specific meal type.</description>
    <fields>
        <fullName>Image__c</fullName>
        <description>Image of the meal.</description>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Price of the food item.</description>
        <label>Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Meal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Tea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anytime</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meal Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meal Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meal Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>